--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "3.2.0",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "video-react": "^0.14.1"
   },
   "scripts": {
     "start": "node server.js",
