--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^3.7.2",
     "antd": "^3.25.1",
     "axios": "^0.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase": "^7.4.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^5.1.1",
